--- a/secrets.properties
+++ b/secrets.properties
@@ -1,4 +1,4 @@
-cuverie_api_url=https://crossfit-fourwinds.com/html/
+cuverie_api_url=https://www.wiki-jardin.fr/index.php/
 cuverie_auth_url=https://devAuthUrl
 
 cuverie_client_id=keycloakClientId
