--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.dummybase">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application
         android:name=".DummyBaseApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Lala"
+        android:label="Crossfit La Horie"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DummyBase">
@@ -33,6 +34,8 @@
             android:name="androidx.test.core.app.InstrumentationActivityInvoker$EmptyFloatingActivity"
             android:exported="true"
             tools:node="merge" />
+
+        <receiver android:name=".receiver.SeancesReminderReceiver"></receiver>
     </application>
 
 </manifest>
